--- a/index.html
+++ b/index.html
@@ -1,13 +1,114 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Páginas de Políticas</title>
+    <title>MakitiPost - Política e Privacidade</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #0077b6;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #023e8a;
+            padding: 10px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            margin: 0 15px;
+            font-size: 1.1em;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #0096c7;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 30px;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .content h2 {
+            font-size: 2em;
+            color: #333;
+        }
+
+        .content p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            color: #555;
+            max-width: 800px;
+            text-align: justify;
+        }
+
+        footer {
+            background-color: #023e8a;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer a {
+            color: #ffdd57;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo</h1>
-    <p><a href="politica_privacidade.html">Política de Privacidade</a></p>
-    <p><a href="exclusao_dados.html">Política de Exclusão de Dados</a></p>
+
+<header>
+    <h1>Bem-vindo ao MakitiPost</h1>
+    <p>Sua fonte confiável para informações sobre privacidade e políticas</p>
+</header>
+
+<nav>
+    <a href="politica_privacidade.html">Política de Privacidade</a>
+    <a href="exclusao_dados.html">Exclusão de Dados</a>
+</nav>
+
+<div class="content">
+    <h2>Política de Privacidade e Termos de Uso</h2>
+    <p>Bem-vindo à nossa Política de Privacidade! Aqui explicamos como suas informações são coletadas, utilizadas e protegidas. Ao utilizar nosso site, você concorda com os termos descritos nesta política.</p>
+    <p>Leia nossas páginas de Política de Privacidade e Exclusão de Dados para mais detalhes.</p>
+</div>
+
+<footer>
+    <p>&copy; 2025 <a href="https://kalebyuser69.github.io/MakitiPost/">MakitiPost</a>. Todos os direitos reservados.</p>
+</footer>
+
 </body>
 </html>
