Adicionando link para Termos de Serviço no index

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 </header>
 
 <nav>
+    <a href="index.html">Home</a>
     <a href="politica_privacidade.html">Política de Privacidade</a>
     <a href="exclusao_dados.html">Exclusão de Dados</a>
+    <a href="termos_servico.html">Termos de Serviço</a>
 </nav>
 
 <div class="content">
